# swa

./: .gitattributes  .gitignore  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  _finish.py  changia.md  maadili.md  ramani.md  readme.md  stage1.swa  test_ainawalk.swa  test_alf.swa  test_alftak.swa  test_and2.swa  test_call_aina.swa  test_call_kazi.swa  test_call_neno.swa  test_crash.swa  test_dbg1.swa  test_dbg2.swa  test_field_assign.swa  test_fields.swa  test_hifadhi.swa  test_id_pos.swa  test_inline_lex.swa  test_just_include.swa  test_kama_wakati.swa  test_kichwa.swa  test_kusanya.swa  test_lex.swa  test_lex_all.swa  test_lex_dbg.swa  test_lex_only.swa  test_manual_parse.swa  test_min.swa  test_minimal.swa  test_minimal_parse.swa  test_msomaji.swa  (+37 more)
.github/: SUPPORT.md
.github/workflows/: ci.yml
docs/: COMPILER_FIXES.md  REMAINING_ISSUES.md  STATUS_AND_ACHIEVEMENTS.md
hati/: PROGRESS_BLOG.md  blogu.md  bootstrap.md  mafanikio.md  malengo.md  marekebisho.md  masuala.md
majaribio/: integration.rs
majaribio/bootstrapi/: jaribio_crash.swa  jaribio_orig.swa
majaribio/features/: jaribio_kwa_tangazo.swa  jaribio_kwa_usemi.swa  jaribio_vunja_ndani.swa
majaribio/msambazaji/: jaribio_field_assign.swa  jaribio_manual_parse.swa  jaribio_min.swa  jaribio_parser.swa  jaribio_parser2.swa  jaribio_parser3.swa  jaribio_sg2.swa  jaribio_sg3.swa  jaribio_sogeza.swa  jaribio_sp_dbg.swa  (+5 more)
msingi/: codegen.swa  kumbukumbu.swa  mfuatano.swa  mkaguzi.swa  msambazaji.swa  msomaji.swa  mteremko.swa  orodha.swa  stage1.swa  uzalishaji.swa
tests/: integration.rs
(+54 files in other folders)
