[package]
name = "kande"
version = "0.1.0"
edition = "2021"
description = "Swa compiler — Kiswahili systems programming language"
authors = ["Swa Language Project"]

[dependencies]
# Arena allocator for AST
bumpalo = "3"

# Source locations
codespan-reporting = "0.11"

# Error handling
thiserror = "2"

# Testing
pretty_assertions = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "kande"
path = "src/driver/main.rs"

[lib]
name = "kande_lib"
path = "src/lib.rs"
